# Deciframe

./: .coverage  .gitignore  .replit  ADMIN_MODULE_COMPLETION_SUMMARY.md  ADMIN_MODULE_SUMMARY.md  ALIAS_ROUTES.py  AUTH0_CONFIGURATION.md  AUTH_FIX_COMMIT_GUIDE.md  AUTH_TEMPLATE_FIX_GUIDE.md  BA_FUNCTIONALITY_GUIDE.md  BUTTON_STYLE_GUIDE.md  CHANGELOG.md  COMPLETE_FEATURES_LIST.md  DECIFRAME_BRAND_GUIDELINES.md  DEPLOYMENT_FIX_COMPLETE.md  DEPLOYMENT_FIX_GUIDE.md  DIVERGENT_BRANCHES_FIX.md  DROPDOWN_MACROS_GUIDE.md  ENDPOINT_IMPLEMENTATION_SUMMARY.md  EXECUTIVE_DASHBOARD_SUMMARY.md  GITHUB_PUSH_READY.md  GITHUB_PUSH_SUMMARY.md  GIT_LOCK_RESOLUTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INVESTOR_DEMO_GUIDE.md  LATEST_FIXES_SUMMARY.md  MANUAL_UPLOAD_GUIDE.md  MANUAL_UPLOAD_INSTRUCTIONS.md  MERGE_CONFLICT_RESOLUTION.md  MISSING_ROUTES.csv  MISSING_ROUTES.md  Makefile  ONBOARDING_SAFETY_SUMMARY.md  PLATFORM_HARDENING_SUMMARY.md  PRODUCTION_502_FIX.md  QA_FINAL_SUMMARY.md  QA_TESTING_SUMMARY.md  README.md  READY_FOR_GITHUB_PUSH.md  ROUTE_DOCTOR_EXECUTIVE_SUMMARY.md  (+145 more)
admin/: __init__.py  additional_routes.py  data_management.py  data_routes.py  forms.py  import_service.py  permissions.py  routes.py
ai/: __init__.py  problem_classifier.py  routes.py  summary_routes.py
analytics/: ai_workflows.py  scheduler.py  train_models.py
app/: flags.py
audit/: log.py
auth/: __init__.py  forms.py  login.html  oauth.py  oidc.py  profile.py  register.html  routes.py  routes_oidc.py  session_auth.py
business/: __init__.py  epic_management.py  forms.py  routes.py
dashboard/: routes.py  (+1 more)
(+329 files in other folders)
